--- a/SBA DOM/style.css
+++ b/SBA DOM/style.css
@@ -1,10 +1,38 @@
 body {
   margin: 0;
+  background-color: #003e1f;
+  font-family: 'Raleway', sans-serif;
 }
 
 #nav-id {
   width: 100%;
-  height: 20px;
-  background-color: green;
+  height: 35px;
+  background-color: #ef233c;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#nav-id a{
+    text-decoration: none;
+    color:#73ba9b;
+    font-weight: 600;
+    
+}
+main {
+    width: 100%;
+    height: 100vh;
+}
+
+h1 {
+    color: #73ba9b;
+    text-align: center;
+    margin-top: 30px;
+    font-weight: 300;
+    
+}
+
+.title-spanish {
+    color: #d5f2e3;
+    font-weight: 300;
 }
