--- a/SBA DOM/style.css
+++ b/SBA DOM/style.css
@@ -22,12 +22,16 @@ body {
 main {
     width: 100%;
     height: 100vh;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
 h1 {
     color: #73ba9b;
-    text-align: center;
-    margin-top: 30px;
+    
     font-weight: 300;
     
 }
@@ -35,4 +39,11 @@ h1 {
 .title-spanish {
     color: #d5f2e3;
     font-weight: 300;
+}
+
+img {
+    width: 500px;
+    height: 300px;
+    border: 3px solid #d90429;
+
 }
