--- a/SBA DOM/pages/signup.css
+++ b/SBA DOM/pages/signup.css
@@ -35,4 +35,13 @@ body {
       font-weight: 300;
       
   }
+
+  #registration {
+    border: 2px solid black;
+    width: 240px;
+    height: 300px;
+    background-color: #f4f0bb;
+  }
+
+  
   
