--- a/SBA DOM/pages/signup.css
+++ b/SBA DOM/pages/signup.css
@@ -7,7 +7,7 @@ body {
   #nav-id {
     width: 100%;
     height: 45px;
-    background-color: #ef233c;
+    background-color: #bb010b;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -39,9 +39,22 @@ body {
   #registration {
     border: 2px solid black;
     width: 240px;
-    height: 300px;
-    background-color: #f4f0bb;
+    height: 350px;
+    padding: 20px;
+    background-color: #73ba9b;
   }
 
+  label {
+    font-weight: 400;
+    
+  }
+
+  input{
+    background-color: #d5f2e3;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius:  5px;
+    
+  }
   
   
