--- a/SBA DOM/pages/signup.css
+++ b/SBA DOM/pages/signup.css
@@ -56,5 +56,12 @@ body {
     border-radius:  5px;
     
   }
+
+  #errorMsg {
+    background-color: yellow;
+    width: 200px;
+    height: 100px;
+    display: none;
+  }
   
   
